[project]
name = "plugrl-client"
version = "0.1.0"
description = ""
authors = [
    {name = "chenhao lu",email = "luch21@mails.tsinghua.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "numpy (<2.3.3)",
    "msgpack (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "plugrl_client", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
